<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity"
    android:orientation="vertical">
    <ImageButton
        android:id="@+id/Back_btn"
        style="@style/option_button"
        android:layout_margin="10dp"
        android:src="@drawable/baseline_turn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rough_button"
        android:elevation="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/Register_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="60sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/inDisplayName_edittext"
            style="@style/input_textbox"/>
        <EditText
            android:id="@+id/inEmail_edittext"
            style="@style/input_textbox"
            android:hint="@string/hint_username"/>
        <EditText
            android:id="@+id/inPassword_edittext"
            style="@style/input_textbox"
            android:hint="@string/hint_password"/>
        <EditText
            android:id="@+id/reInPassword_edittext"
            style="@style/input_textbox"
            android:hint="@string/hint_repassword"/>
        <Button
            android:id="@+id/Register_btn"
            style="@style/main_button"
            android:background="@drawable/rough_button"
            android:text="@string/register_btn"
            android:elevation="10dp"/>
    </LinearLayout>
</LinearLayout>