<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/very_light_orange">
    <ImageButton
        android:id="@+id/Back_btn"
        style="@style/option_button"
        android:layout_margin="10dp"
        android:src="@drawable/baseline_turn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rough_button"
        android:elevation="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:background="@color/white">
        <TextView
            style="@style/label_textbox"
            android:text="@string/hint_displayname"
            android:textAlignment="textEnd"
            android:background="@color/orange"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingEnd="10dp"
            android:elevation="10dp"/>
        <EditText
            android:id="@+id/upDisplayName_edittext"
            style="@style/input_textbox"/>
        <TextView
            style="@style/label_textbox"
            android:text="@string/hint_password"
            android:textAlignment="textEnd"
            android:background="@color/orange"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingEnd="10dp"
            android:elevation="10dp"/>
        <EditText
            android:id="@+id/upPassword_edittext"
            style="@style/input_textbox"
            android:hint="@string/hint_password"/>
        <TextView
            style="@style/label_textbox"
            android:text="@string/hint_repassword"
            android:textAlignment="textEnd"
            android:background="@color/orange"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingEnd="10dp"
            android:elevation="10dp"/>
        <EditText
            android:id="@+id/upRePassword_edittext"
            style="@style/input_textbox"
            android:hint="@string/hint_repassword"/>
        <Button
            android:id="@+id/update_user_information_btn"
            style="@style/main_button"
            android:background="@drawable/rough_button"
            android:text="@string/update_btn"
            android:elevation="10dp"/>
    </LinearLayout>
</LinearLayout>