<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/very_light_orange">
    <LinearLayout
        android:id="@+id/user_information_textbox_group"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:elevation="10dp">
        <TextView
            style="@style/label_textbox"
            android:text="@string/hint_displayname"
            android:textAlignment="textEnd"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:paddingEnd="10dp"
            android:elevation="10dp"/>
        <TextView
            android:id="@+id/textbox_displayname"
            style="@style/show_textbox"
            android:text="@string/hint_displayname"
            android:paddingStart="10dp"/>
        <TextView
            style="@style/label_textbox"
            android:text="@string/hint_username"
            android:textAlignment="textEnd"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:paddingEnd="10dp"
            android:elevation="10dp"/>
        <TextView
            android:id="@+id/textbox_username"
            style="@style/show_textbox"
            android:text="@string/hint_username"
            android:paddingStart="10dp"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/update_user_information_btn"
        style="@style/option_button"
        android:src="@drawable/pen"
        android:layout_below="@id/user_information_textbox_group"
        android:layout_alignParentRight="true"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rough_button"/>

    <Button
        android:id="@+id/delete_user_btn"
        style="@style/big_button"
        android:layout_below="@+id/update_user_information_btn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/red"
        android:elevation="10dp"
        android:text="@string/delete_btn"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/logout_btn"
        style="@style/big_button"
        android:layout_below="@+id/delete_user_btn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/logout_btn"
        android:textColor="@color/black"
        android:elevation="10dp"/>
</RelativeLayout>